--- a/style.css
+++ b/style.css
@@ -41,3 +41,10 @@ body {
     border-left: 2px solid black;
     border-right: 2px solid black;
 }
+
+.cell {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+}
