Refactor to allow cpu auto play

--- a/style.css
+++ b/style.css
@@ -15,6 +15,23 @@ body {
 .content {
     flex: 1;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    /* gap */
+}
+
+.game-prompts {
+    height: 10%;
+    width: 60%;
+    /* background-color: black; */
+    text-align: center;
+    font-size: 22px;
+}
+
+.game-space {
+    flex: 1;
+    display: flex;
     align-items: center;
     justify-content: center;
 }
