--- a/style.css
+++ b/style.css
@@ -62,3 +62,14 @@ body {
     justify-content: center;
     font-size: 40px;
 }
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 10px;
+}
+
+.button {
+    width: 100px
+}
