--- a/style.css
+++ b/style.css
@@ -14,20 +14,22 @@ body {
 
 .content {
     flex: 1;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 20% auto;
     align-items: center;
+    justify-content: center;
 }
 
 .game-prompts {
-    height: 10%;
-    width: 60%;
-    text-align: center;
     font-size: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .game-space {
-    flex: 1;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -67,9 +69,42 @@ body {
     display: flex;
     justify-content: center;
     gap: 15px;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .button {
     width: 100px
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 65%;
+}
+
+.your-turn {
+    background-color: rgb(80, 140, 231);
+}
+
+.winner {
+    background-color: rgb(0, 167, 0);
+}
+
+.loser {
+    background-color: red;
+}
+
+.input-div {
+    display: grid;
+    grid-template-columns: auto 30%;
+}
+
+.input-div > div {
+    display: grid;
+    grid-template-columns: 25% auto;
+}
+
+input {
+    width: auto;
 }
